r2_motion/log/build_2025-05-23_16-07-22/sensors/stderr.log
  File "/home/adam/r2_motion/install/sensors/lib/python3.10/site-packages/sensors/sensors.py", line 96
    self.current_sensor_data{
                            ^
SyntaxError: invalid syntax

